--- a/RPA_Coulomb.ipynb
+++ b/RPA_Coulomb.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "joined-theory",
    "metadata": {},
    "outputs": [
@@ -10,12 +10,41 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Done!\n"
+      "Ham_K is ready!\n",
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "11\n",
+      "12\n",
+      "13\n",
+      "14\n",
+      "15\n",
+      "16\n",
+      "17\n",
+      "18\n",
+      "19\n",
+      "20\n",
+      "21\n",
+      "22\n",
+      "23\n",
+      "24\n",
+      "25\n",
+      "26\n",
+      "(3, 3, 3)\n"
      ]
     }
    ],
    "source": [
     "import numpy as np\n",
+    "from numpy import linalg as LA\n",
     "import  math\n",
     "import numba\n",
     "from numba import jit\n",
@@ -26,13 +55,6 @@
     "    N = 1/(np.exp(E/kT) + 1)\n",
     "    return N\n",
     "\n",
-    "@jit(nopython=True) \n",
-    "def dirac_delta(kT,E):\n",
-    "    if(math.fabs(E/kT) < 20):\n",
-    "        delta = (np.exp(E/kT)/kT)/(1 + np.exp(E/kT))**2\n",
-    "    else:\n",
-    "        delta = 0\n",
-    "    return delta\n",
     "\n",
     "\n",
     "@jit(nopython=True) \n",
@@ -77,44 +99,51 @@
     "\n",
     "\n",
     "@jit(nopython=True) \n",
-    "def polarization_operator(kmesh, HamK):\n",
+    "def polarization_operator(num_orb, kmesh, HamK):\n",
+    "    num_kpoints = kmesh[0] * kmesh[1] * kmesh[2]\n",
+    "    weight = 1/(num_kpoints)\n",
     "    \n",
     "    rpa_pol = np.zeros((kmesh[0], kmesh[1], kmesh[2]), dtype=np.complex128)\n",
     "        \n",
-    "\n",
     "    #smearing in eV\n",
     "    delta = 0.004  # 50K\n",
-    "    s\n",
+    "    kT = 0.004  # 50K\n",
+    " \n",
+    "    for q1 in range(kmesh[0]):\n",
+    "        for q2 in range(kmesh[1]):\n",
+    "            for q3 in range(kmesh[2]): #q\n",
+    "                q  =  (q1 * kmesh[1] * kmesh[2])  + (q2 * kmesh[2]) + q3\n",
+    "                print(q)\n",
+    "        \n",
+    "                for k1 in range(kmesh[0]):\n",
+    "                    for k2 in range(kmesh[1]):\n",
+    "                        for k3 in range(kmesh[2]): #k\n",
+    "                            k = (k1 * kmesh[1] * kmesh[2])  + (k2 * kmesh[2]) + k3  # k\n",
+    "                            w_k, v_k = LA.eigh(HamK[k])\n",
+    "                            \n",
+    "                            \n",
+    "                            kq1 = (q1 + k1)%kmesh[0] \n",
+    "                            kq2 = (q2 + k2)%kmesh[1] \n",
+    "                            kq3 = (q3 + k2)%kmesh[2] #k+q\n",
+    "                            \n",
+    "                            kq = (kq1 * kmesh[1] * kmesh[2]) + (kq2 * kmesh[2]) + kq3  #k+q \n",
+    "                            w_kq, v_kq = LA.eigh(HamK[kq])\n",
+    "                            \n",
+    "                            #rpa polarisation\n",
+    "                            for n in range(num_orb):\n",
+    "                                for m in range(num_orb):\n",
+    "                                    rpa_pol[q1, q2, q3] += 2 * weight* (fermi(kT, w_k[n]) - fermi(kT, w_kq[m])) \\\n",
+    "                                    * np.dot(v_k[n], v_kq[m])**2 / (w_k[n] - w_kq[m] - 1j*delta) \n",
+    "                                                                              \n",
     "    \n",
-    "     \n",
-    "    for i in range(kpoints_line):\n",
-    "        a1 = int(k_vec[i].real)\n",
-    "        a2 = int(k_vec[i].imag) #k\n",
-    "        for j in range(400):\n",
-    "            for n in range(24):\n",
-    "                for b1 in range(k_div):  #q\n",
-    "                    for b2 in range(k_div):\n",
-    "                        c1 = (a1 + b1)%k_div #k+q\n",
-    "                        c2 = (a2 + b2)%k_div\n",
-    "                        d1 = (k_div + a1 - b1)%k_div #k-q\n",
-    "                        d2 = (k_div + a2 - b2)%k_div\n",
-    "                        for m in range(3):\n",
-    "                                selfen[0, i, j, n] += (bose(kT, w_q[b1, b2, m]) + fermi(kT, en[1, c1, c2, n])) / \\\n",
-    "                                (en_line[j] - en[1, c1, c2, n] + w_q[b1, b2, m] - 1j*delta)\n",
-    "                                \n",
-    "                                selfen[1, i, j, n] += (1 + bose(kT, w_q[b1, b2, m]) - fermi(kT, en[0, d1, d2, n])) / \\\n",
-    "                                (en_line[j] - en[0, d1, d2, n] - w_q[b1, b2, m] - 1j*delta)\n",
-    "                                \n",
-    "                                \n",
-    "\n",
-    "    selfen = 2 * (I**2) * Mz * weight * selfen\n",
-    "    return selfen\n",
+    "    \n",
+    "    return rpa_pol\n",
     "\n",
     "\n",
     "\n",
     "if __name__ == '__main__':\n",
     "    \n",
-    "    kmesh = np.array([8,8,8])\n",
+    "    kmesh = np.array([3,3,3])\n",
     "    num_kpoints = kmesh[0] * kmesh[1] * kmesh[2]\n",
     "    weight = 1/(num_kpoints)\n",
     "    kT = 100\n",
@@ -122,9 +151,8 @@
     "    e_fermi = 0.1520 # eV\n",
     "\n",
     "    cell_vec = np.array([[-1.742087135,   1.742087135,   3.467599447],\n",
-    "                    [1.742087135,  -1.742087135,   3.467599447], \n",
-    "                    [1.742087135,   1.742087135,  -3.467599447]])\n",
-    "\n",
+    "                        [1.742087135,  -1.742087135,   3.467599447], \n",
+    "                        [1.742087135,   1.742087135,  -3.467599447]])\n",
     "\n",
     "    k_vec = kmesh_preparation(cell_vec)\n",
     "\n",
@@ -146,16 +174,16 @@
     "\n",
     "    Ham_K = calc_hamK(num_orb, num_kpoints, n_min, n_max, cell_vec, k_vec, Ham_R)\n",
     "    \n",
-    "\n",
+    "    print(\"Ham_K is ready!\")\n",
     "    \n",
-    "    \n",
-    "    "
+    "    rpa_pol =  polarization_operator(num_orb, kmesh, Ham_K)\n",
+    "    print(rpa_pol.shape)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "specialized-foster",
+   "id": "legitimate-parliament",
    "metadata": {},
    "outputs": [],
    "source": []
