--- a/RPA_Coulomb.ipynb
+++ b/RPA_Coulomb.ipynb
@@ -2,49 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "joined-theory",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Ham_K is ready!\n",
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n",
-      "10\n",
-      "11\n",
-      "12\n",
-      "13\n",
-      "14\n",
-      "15\n",
-      "16\n",
-      "17\n",
-      "18\n",
-      "19\n",
-      "20\n",
-      "21\n",
-      "22\n",
-      "23\n",
-      "24\n",
-      "25\n",
-      "26\n",
-      "(3, 3, 3)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from numpy import linalg as LA\n",
     "import  math\n",
     "import numba\n",
     "from numba import jit\n",
@@ -56,10 +19,19 @@
     "    return N\n",
     "\n",
     "\n",
+    "@jit(nopython=True) \n",
+    "def dirac_delta(kT,E):\n",
+    "    if(math.fabs(E/kT) < 20):\n",
+    "        delta = (np.exp(E/kT)/kT)/(1 + np.exp(E/kT))**2\n",
+    "    else:\n",
+    "        delta = 0\n",
+    "    return delta\n",
+    "\n",
     "\n",
     "@jit(nopython=True) \n",
-    "def kmesh_preparation(cell_vec):\n",
-    "    #reciprocal vectors and and kmesh for integration\n",
+    "def kmesh_preparation(kmesh, cell_vec):\n",
+    "    \n",
+    "    num_kpoints = kmesh[0] * kmesh[1] * kmesh[2]\n",
     "    rec_vec = np.zeros((3,3))\n",
     "    k_vec  = np.zeros((num_kpoints,3))\n",
     "\n",
@@ -67,14 +39,11 @@
     "    rec_vec[1]  = (2 * np.pi / np.linalg.det(cell_vec)) * np.cross(cell_vec[2], cell_vec[0])\n",
     "    rec_vec[2]  = (2 * np.pi / np.linalg.det(cell_vec)) * np.cross(cell_vec[0], cell_vec[1])\n",
     "\n",
-    "    idx = 0\n",
-    "    for i in range(kmesh[0]):\n",
-    "        for j in range(kmesh[1]):\n",
-    "            for k in range(kmesh[2]):\n",
-    "                for z in range(3):\n",
-    "                    k_vec[idx,z] = (rec_vec[0,z] * i/ kmesh[0]) + (rec_vec[1,z] * j / kmesh[1]) + (rec_vec[2,z] * k / kmesh[2])\n",
-    "\n",
-    "                idx+=1\n",
+    "    for q1 in range(kmesh[0]):\n",
+    "        for q2 in range(kmesh[1]):\n",
+    "            for q3 in range(kmesh[2]):\n",
+    "                q = (q1 * kmesh[1] * kmesh[2]) + (q2 * kmesh[2]) + q3\n",
+    "                k_vec[q] = (rec_vec[0] * q1/ kmesh[0]) + (rec_vec[1] * q2 / kmesh[1]) + (rec_vec[2] * q3 / kmesh[2])\n",
     "\n",
     "    return k_vec \n",
     "\n",
@@ -96,65 +65,114 @@
     "    return Ham_K\n",
     "\n",
     "\n",
+    "@jit(nopython=True) \n",
+    "def bare_coulomb_q(kmesh):\n",
+    "    num_kpoints = kmesh[0] * kmesh[1] * kmesh[2]\n",
+    "    weight = 1/num_kpoints\n",
+    "    \n",
+    "    Vq = np.zeros(num_kpoints, dtype=np.complex128)\n",
+    "    \n",
+    "    for q in range(num_kpoints):\n",
+    "        if q == 0:\n",
+    "            Vq[q] = 4 * np.pi * 14.3948/(4.9 * np.linalg.norm(k_vec[q])**2 + 1e-3)\n",
+    "        else:\n",
+    "            Vq[q] = 4 * np.pi * 14.3948/(4.9 * np.linalg.norm(k_vec[q])**2 )\n",
+    "            \n",
+    "    return Vq\n",
+    "               \n",
+    "\n",
+    "                \n",
     "\n",
     "\n",
     "@jit(nopython=True) \n",
-    "def polarization_operator(num_orb, kmesh, HamK):\n",
+    "def polarization_operator(num_orb, kmesh, Ham_K):\n",
     "    num_kpoints = kmesh[0] * kmesh[1] * kmesh[2]\n",
-    "    weight = 1/(num_kpoints)\n",
+    "    weight = 1/num_kpoints\n",
     "    \n",
-    "    rpa_pol = np.zeros((kmesh[0], kmesh[1], kmesh[2]), dtype=np.complex128)\n",
+    "    rpa_pol = np.zeros(num_kpoints, dtype=np.complex128)\n",
     "        \n",
     "    #smearing in eV\n",
-    "    delta = 0.004  # 50K\n",
-    "    kT = 0.004  # 50K\n",
+    "    delta =  0.0086  # 100K\n",
+    "    kT = 0.0086  # 100K\n",
     " \n",
     "    for q1 in range(kmesh[0]):\n",
     "        for q2 in range(kmesh[1]):\n",
     "            for q3 in range(kmesh[2]): #q\n",
     "                q  =  (q1 * kmesh[1] * kmesh[2])  + (q2 * kmesh[2]) + q3\n",
-    "                print(q)\n",
+    "                print(\"RPA_qmesh progress:\", q)\n",
     "        \n",
     "                for k1 in range(kmesh[0]):\n",
     "                    for k2 in range(kmesh[1]):\n",
     "                        for k3 in range(kmesh[2]): #k\n",
     "                            k = (k1 * kmesh[1] * kmesh[2])  + (k2 * kmesh[2]) + k3  # k\n",
-    "                            w_k, v_k = LA.eigh(HamK[k])\n",
-    "                            \n",
+    "                            w_k, v_k = np.linalg.eigh(Ham_K[k])\n",
     "                            \n",
     "                            kq1 = (q1 + k1)%kmesh[0] \n",
     "                            kq2 = (q2 + k2)%kmesh[1] \n",
     "                            kq3 = (q3 + k2)%kmesh[2] #k+q\n",
     "                            \n",
     "                            kq = (kq1 * kmesh[1] * kmesh[2]) + (kq2 * kmesh[2]) + kq3  #k+q \n",
-    "                            w_kq, v_kq = LA.eigh(HamK[kq])\n",
+    "                            w_kq, v_kq = np.linalg.eigh(Ham_K[kq])\n",
     "                            \n",
     "                            #rpa polarisation\n",
-    "                            for n in range(num_orb):\n",
-    "                                for m in range(num_orb):\n",
-    "                                    rpa_pol[q1, q2, q3] += 2 * weight* (fermi(kT, w_k[n]) - fermi(kT, w_kq[m])) \\\n",
-    "                                    * np.dot(v_k[n], v_kq[m])**2 / (w_k[n] - w_kq[m] - 1j*delta) \n",
+    "                            for m in range(num_orb):\n",
+    "                                for n in range(num_orb):\n",
+    "                                    rpa_pol[q] += 2 * weight* (fermi(kT, w_k[m]) - fermi(kT, w_kq[n])) \\\n",
+    "                                    * np.dot(np.ascontiguousarray(v_k[n]), np.ascontiguousarray(v_kq[m]))**2 / (w_kq[m] - w_k[n] - 1j*delta) \n",
     "                                                                              \n",
-    "    \n",
-    "    \n",
     "    return rpa_pol\n",
     "\n",
-    "\n",
+    "    \n",
+    "@jit(nopython=True) \n",
+    "def average(num_kpoints, num_orb, Ham_K, scr_vq):\n",
+    "    U_av = 0.0\n",
+    "    dos_F = 0.0\n",
+    "    kT = 0.0086  # 100K\n",
+    "    \n",
+    "    for k in range(num_kpoints):\n",
+    "        w_k, v_k = np.linalg.eigh(Ham_K[k])\n",
+    "        for n in range(num_orb):\n",
+    "            dos_F += dirac_delta(kT, w_k[n])\n",
+    "            U_av += dirac_delta(kT, w_k[n]) * scr_vq[k]\n",
+    "            print(dirac_delta(kT, w_k[n]))\n",
+    "            \n",
+    "    U_av = U_av/dos_F         \n",
+    "            \n",
+    "    return U_av\n",
+    "   \n",
+    "    \n",
+    "# @jit(nopython=True)    \n",
+    "# def dos(num_kpoints, num_orb, energy, Ham_K):\n",
+    "#     dos_F = np.zeros(len(energy))\n",
+    "#     kT = 0.0086  # 100K\n",
+    "    \n",
+    "#     for en in range(len(energy)):\n",
+    "#         for k in range(num_kpoints):\n",
+    "#             w_k, v_k = np.linalg.eigh(Ham_K[k])\n",
+    "#             for n in range(num_orb):\n",
+    "#                 dos_F[en] += dirac_delta(kT, energy[en] - w_k[n])\n",
+    "                \n",
+    "#         dos_F[en] = dos_F[en]/num_kpoints        \n",
+    "            \n",
+    "#     return dos_F\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
     "\n",
     "if __name__ == '__main__':\n",
     "    \n",
-    "    kmesh = np.array([3,3,3])\n",
+    "    kmesh = np.array([30,30,30])\n",
     "    num_kpoints = kmesh[0] * kmesh[1] * kmesh[2]\n",
-    "    weight = 1/(num_kpoints)\n",
-    "    kT = 100\n",
     "\n",
-    "    e_fermi = 0.1520 # eV\n",
+    "    e_fermi = 12 # eV\n",
     "\n",
     "    cell_vec = np.array([[-1.742087135,   1.742087135,   3.467599447],\n",
     "                        [1.742087135,  -1.742087135,   3.467599447], \n",
     "                        [1.742087135,   1.742087135,  -3.467599447]])\n",
     "\n",
-    "    k_vec = kmesh_preparation(cell_vec)\n",
+    "    k_vec = kmesh_preparation(kmesh, cell_vec)\n",
     "\n",
     "    with open('tb_model.dat') as fp:\n",
     "        rows = (line.split() for line in fp)\n",
@@ -166,24 +184,46 @@
     "    ham_values = ham_values.astype('f8').view('c16').ravel()  # View as complex [N]\n",
     "\n",
     "    num_orb = max(orbs[:,0])\n",
+    "    print('num_orb', num_orb)\n",
     "    n_min, n_max = vecs.min(0), vecs.max(0)  # [3]\n",
     "    n_size = n_max - n_min + 1  # Plus 1 for 0th\n",
     "\n",
     "    Ham_R = np.zeros((*n_size, num_orb, num_orb), dtype='c16')\n",
     "    Ham_R[(*(vecs + n_max).T, *(orbs.T - 1))] = ham_values\n",
+    "            \n",
+    "  \n",
+    "    #here we control doping via the Fermi energy\n",
+    "    Ham_R[n_max[0], n_max[1], n_max[2]] = \\\n",
+    "    Ham_R[n_max[0], n_max[1], n_max[2]] - (e_fermi * np.diag(np.ones(num_orb)))\n",
+    "    \n",
     "\n",
     "    Ham_K = calc_hamK(num_orb, num_kpoints, n_min, n_max, cell_vec, k_vec, Ham_R)\n",
-    "    \n",
     "    print(\"Ham_K is ready!\")\n",
     "    \n",
+    "# # Test this if you are not sure about smearing and kmesh\n",
+    "#     import matplotlib.pyplot as plt\n",
+    "#     energy = np.arange(6, 13, 0.01)\n",
+    "#     dos_F = dos(num_kpoints, num_orb, energy, Ham_K)\n",
+    "#     plt.plot(energy, dos_F)\n",
+    "    \n",
     "    rpa_pol =  polarization_operator(num_orb, kmesh, Ham_K)\n",
-    "    print(rpa_pol.shape)"
+    "    print(\"RPA polarization is ready\")\n",
+    "    \n",
+    "    bare_vq = bare_coulomb_q(kmesh)\n",
+    "    print(\"bare Coulomb is ready\")\n",
+    "    \n",
+    "    scr_vq = bare_vq/(1 + bare_vq * rpa_pol) \n",
+    "  \n",
+    "    bare_vq_av = average(num_kpoints, num_orb, Ham_K, bare_vq.real)\n",
+    "    scr_vq_av = average(num_kpoints, num_orb, Ham_K, scr_vq.real)\n",
+    "    \n",
+    "    print('Fermi energy: ',e_fermi, 'Bare/Scr Coulomb: ', bare_vq_av,'/',scr_vq_av) "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "legitimate-parliament",
+   "id": "57e38262",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -191,7 +231,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -205,7 +245,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.12"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
